Fix Toll Banner Spacing Issue
Fixed an issue where the necessary padding required for Toll banners was applied to all banners, resulting in excessive space around banners where it was not needed.

--- a/css/shields.css
+++ b/css/shields.css
@@ -1,6 +1,7 @@
 .bannerShieldContainer.toll .banner {
 	background-color: var(--yellow);
 	color: var(--black);
+	padding: 0.1rem 0.5rem 0.1rem 0.5rem;
 }
 
 .bannerShieldContainer.I- .routeNumber {
